# FlappyAI

./: README.md  data  pyproject.toml
config/: config-feedforward.txt
flappyai/: bird.py  config.py  ground.py  main.py  pipe.py  pipes.py  utils.py
flappyai/config/: config-feedforward.txt
